Closed
Bug 140107
Opened 24 years ago
Closed 23 years ago
HTTP headers show in frame [when server pipelines chunked responses]
Categories
(Core :: Networking: HTTP, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla1.0.1
People
(Reporter: darin.moz, Assigned: darin.moz)
References
()
Details
(Keywords: topembed, Whiteboard: [pipelining][adt2 RTM][verified trunk] [ETA 06/21])
Attachments
(2 files, 1 obsolete file)
HTTP headers show in frame
Not 100% reproducible, and possibly related to pipelining being enabled.
linux build 2002-04-25/10
| Assignee | ||
Comment 1•24 years ago
|
||
| Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P3
Whiteboard: [pipelining]
Target Milestone: --- → mozilla1.0
Comment 3•24 years ago
|
||
I cannot reproduce this in RC2, build 20020507-00 on Linux.
BTW, isnt' this a dupe of bug #140853 ?
Comment 4•24 years ago
|
||
considering this bug have a lower number and was therefore reported before bug
#140853 , it must be the other way around.
That bug #140853 is a DUP of this bug.
Bug #140853 however have had more discussion so we might as well mark this bug a
DUP of bug #140853.
In anycase it's the same bug.
They may also both be dups of bug #82948 or just related to it.
IMO we should mark both as DUPS of bug #82948.
| Assignee | ||
Comment 7•23 years ago
|
||
*** Bug 150672 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 8•23 years ago
|
||
*** Bug 147097 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•23 years ago
|
Target Milestone: Future → mozilla1.0.1
| Assignee | ||
Updated•23 years ago
|
Summary: HTTP headers show in frame → HTTP headers show in frame [when server pipelines chunked responses]
| Assignee | ||
Comment 9•23 years ago
|
||
this patch fixes the problem.
| Assignee | ||
Comment 10•23 years ago
|
||
cleaned up patch.
Attachment #87875 -
Attachment is obsolete: true
| Assignee | ||
Comment 11•23 years ago
|
||
this latest patch is functionally equivalent to the first, but it goes one step
further by simplifying some related code. i've tested the patch with a number
of different sites, and it seems to do the trick.
Whiteboard: [pipelining] → [pipelining][adt2 RTM]
Comment 12•23 years ago
|
||
Attachment #87985 -
Flags: superreview+
Comment 13•23 years ago
|
||
Comment on attachment 87985 [details] [diff] [review]
v2 patch
i liked the other ascii picture better. :-)
r=dougt
Attachment #87985 -
Flags: superreview+ → review+
| Assignee | ||
Comment 14•23 years ago
|
||
fixed-on-trunk
hoping to land this fix on the 1.0 branch as well.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Keywords: mozilla1.0.1,
topembed
Resolution: --- → FIXED
| Assignee | ||
Comment 15•23 years ago
|
||
*** Bug 140853 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 16•23 years ago
|
||
*** Bug 144574 has been marked as a duplicate of this bug. ***
Comment 17•23 years ago
|
||
tested with and without pipelining and checked sites in duplicate bugs
verified trunk - 06/18/02 builds - win NT4, linux rh6, mac osX
Status: RESOLVED → VERIFIED
Comment 18•23 years ago
|
||
*** Bug 82948 has been marked as a duplicate of this bug. ***
Updated•23 years ago
|
Whiteboard: [pipelining][adt2 RTM] → [pipelining][adt2 RTM][verified trunk]
Updated•23 years ago
|
Attachment #87985 -
Flags: approval+
Comment 19•23 years ago
|
||
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
Keywords: mozilla1.0.1 → mozilla1.0.1+
Comment 20•23 years ago
|
||
adt1.0.1 (on ADT's behalf) approval for checkin to the 1.0 branch, pending
drivers' approval. pls check this in asap, then add the "fixed1.0.1" keyword.
Comment 22•23 years ago
|
||
*** Bug 148298 has been marked as a duplicate of this bug. ***
Comment 23•23 years ago
|
||
*** Bug 155876 has been marked as a duplicate of this bug. ***
Updated•23 years ago
|
Keywords: verified1.0.1
Comment 25•23 years ago
|
||
*** Bug 164833 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•