fixes bug 140107 "HTTP headers show in frame [when server pipelines chunked responses]" r=dougt sr=rpotts